# EnCroissant

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  shiftleft-analysis.yml
ecr_chess/: Cargo.toml
ecr_chess/benches/: benchmarks.rs
ecr_chess/src/: board.rs  coordinate.rs  lib.rs  move.rs  utils.rs
ecr_chess/src/formats/: fen.rs
ecr_chess/src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  move_gen.rs  pawn.rs  queen.rs  rook.rs
ecr_engine/: Cargo.toml
ecr_engine/benches/: benchmarks.rs
ecr_engine/src/: board.rs  coordinate.rs  eval.rs  lib.rs  move.rs  movement.rs  utils.rs
ecr_engine/src/eval/: eval.rs  evaluation.rs  mod.rs  utils.rs
ecr_engine/src/formats/: fen.rs
ecr_engine/src/move_gen/: directions.rs  generation.rs  mod.rs  move_gen.rs  utils.rs
ecr_engine/src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  move_gen.rs  move_utils.rs  pawn.rs  queen.rs  rook.rs
ecr_engine/src/search/: mod.rs  search.rs  search_utils.rs
ecr_formats/: Cargo.toml
ecr_formats/src/: fen.rs  lib.rs
ecr_shared/: Cargo.toml
ecr_shared/src/: board.rs  coordinate.rs  lib.rs  pieces.rs
