[package]
name = "ecr_chess"
version = "0.0.1"
authors = ["ravi0li <moritz@howtoflex.club>", "Benedikt <benediktb11@tuta.io>"]
edition = "2018"
license = "AGPL-3.0-only"
repository = "https://github.com/iuselinuxbtw/EnCroissant"

[dependencies]
dyn-clone = "1.0.4"
dyn-clonable = "0.9.0"
regex = "1.4.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"
itertools = "0.10.0"

[dev-dependencies]
mockall = "0.9.1"