[package]
name = "ecr_engine"
version = "0.0.1"
authors = ["ravi0li <moritz@howtoflex.club>", "Benedikt <benediktb11@tuta.io>"]
edition = "2018"
license = "AGPL-3.0-only"
repository = "https://github.com/iuselinuxbtw/EnCroissant"

[dependencies]
dyn-clone = "1.0.4"
dyn-clonable = "0.9.0"
thiserror = "1.0.24"
trees = "0.4.2"
ecr_formats = { path = "../ecr_formats" }
ecr_shared = { path = "../ecr_shared" }

[dev-dependencies]
mockall = "0.9.1"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
html_reports = true